testsuite/tests/contrib/lkt_semantic/invalid_import/test.out
Resolving test.lkt
==================
test.lkt:1:10: error: Expected 'dynvar', got 'import'
1 | @invalid import invalid_import
  |          ^^^^^^

